--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
-// vercel.json
-
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
-  ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
